--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "start": "craco start",
     "build": "craco build",
-    "test": "craco test",
+    "test": "craco test --watchAll --collect-coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
